# learnOpenGL

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/models/ruins/: house.mtl
assets/shaders/army/geom/: fragment.glsl  vertex.glsl
assets/shaders/army/light/: fragment.glsl  vertex.glsl
assets/shaders/frustrum/: vertex.glsl
assets/shaders/mirror/: vertex.glsl
assets/shaders/proj/: fragment.glsl  vertex.glsl
assets/shaders/ruins/: fragment.glsl  vertex.glsl
assets/shaders/skybox/: vertex.glsl
assets/shaders/suit/: vertex.glsl
assets/shaders/suite/: fragment.glsl  vertex.glsl
src/: app.rs  assets.rs  camera.rs  lib.rs  math.rs  model.rs  obj.rs  painter.rs  result.rs  textures.rs  vertex.rs
src/model/: mesh.rs  mod.rs
