[package]
name = "lights"
version = "0.1.0"
authors = ["Aleksey Kladov <aleksey.kladov@gmail.com>"]

[dependencies]
cgmath = "0.7"
env_logger = "0.3"
gl = "0.5"
image = "0.6"
log = "0.3"
time = "0.1"
wavefront_obj = "2"

[dependencies.glium]
version = "0.13"
features = ["glutin"]

[[bin]]
name = "mirror"
path = "src/bin/mirror/main.rs"

[[bin]]
name = "crysis"
path = "src/bin/crysis/main.rs"